--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^1.3.1",
     "babel-jest": "^29.7.0",
+    "browserstack-cypress-cli": "^1.31.7",
     "cypress": "^13.13.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
